--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-Django==4.2.7
-djangorestframework==3.14.0
-django-allauth==0.61.1
-celery==5.3.4
-redis==5.0.1
-psycopg2-binary==2.9.9
-django-cors-headers==4.3.1
-django-celery-beat==2.5.0
-django-celery-results==2.6.0
-Pillow==10.1.0
-requests==2.31.0
+Django
+djangorestframework
+django-allauth
+celery
+redis
+psycopg2-binary
+django-cors-headers
+django-celery-beat
+django-celery-results
+django-filter
+Pillow
+requests
+whitenoise
